fix misaligned email pt.2

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1669,10 +1669,10 @@
 		@media screen and (max-width: 480px) {
 
 			#signup-form {
-				-moz-flex-direction: column;
-				-webkit-flex-direction: column;
-				-ms-flex-direction: column;
-				flex-direction: column;
+				-moz-flex-direction: row;
+				-webkit-flex-direction: row;
+				-ms-flex-direction: row;
+				flex-direction: row;
 			}
 
 				#signup-form input[type="type"],
